The usual... more refactoring and fixes...
